fixed next free class not showing sometimes
also fixed some margin and padding

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 #time-icon {
-    margin: 0px 8px 0px 0px;
+    margin: 0px 7px 0px 0px;
     height: 10px;
     width: 10px;
     border-radius: 50%;
