--- a/src/components/Header/Header.modules.css
+++ b/src/components/Header/Header.modules.css
@@ -23,7 +23,7 @@
 
 .app-logo {
     width: 36px;
-    transform: translate(0px, 2px);
+    transform: translate(0px, 1.25px);
     margin-right: 3px;
 }
 
